# ICRA2024_Quadruped_Robot_Challenges

./: README.md
ICRA2024_QRC_Simulation_Map/: CMakeLists.txt  README.md  package.xml
ICRA2024_QRC_Simulation_Map/launch/: gazebo_world.launch
ICRA2024_QRC_Simulation_Map/urdf/: map_flat.urdf  map_sloped.urdf
ICRA2024_QRC_Simulation_Map/worlds/: competition.world
ieee-qrc-2024-device_code/: README.md
ieee-qrc-2024-device_code/Moth/: README.md
ieee-qrc-2024-device_code/Moth/python/: README.md  client.py  sensor_msg.py  video_moth.py
ieee-qrc-2024-device_code/Moth/python/README_Korean/: README.md
ieee-qrc-2024-device_code/unitree_sdk2-main/: CMakeLists.txt
ieee-qrc-2024-device_code/unitree_sdk2-main/example/moth/: client.cpp  client.hpp
