<?xml version="1.0"?>
<package format="2">
  <name>ICRA2024_Quadruped_Competition</name>
  <version>0.0.0</version>
  <description>The ICRA2024_Quadruped_Competition package</description>

  <maintainer email="nicky707@skku.edu">rise-jjm-ubuntu</maintainer>

  <license>TODO</license>
    <exec_depend>gazebo_ros</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
